--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,3 @@
-/* Navbar Styles */
-
 .input-filter {
   padding: 12px;
   border: 1px solid #ccc;
@@ -9,8 +7,8 @@
 }
 
 .input-filter::placeholder {
-  font-size: 14px; /* Adjust the font size as needed */
-  color: #999; /* Adjust the color of the placeholder text */
+  font-size: 14px;
+  color: #999;
 }
 
 .input-search {
@@ -23,8 +21,8 @@
 }
 
 .input-search::placeholder {
-  font-size: 14px; /* Adjust the font size as needed */
-  color: #999; /* Adjust the color of the placeholder text */
+  font-size: 14px;
+  color: #999;
 }
 
 .navbar {
@@ -53,16 +51,14 @@
   color: white;
 }
 
-/* Product List Styles */
 .product-list {
-  margin-top: 40px; /* Add margin to create space for Navbar */
-  /* The rest of your ProductList styles... */
+  margin-top: 40px;
 }
 
 .product-filter {
   text-align: center;
-  background-color: white; /* Add background color to the filter section */
-  padding: 10px; /* Add padding to the filter section */
+  background-color: white;
+  padding: 10px;
 }
 
 .product-filter input[type="number"],
@@ -75,19 +71,18 @@
 }
 
 .product-filter button {
-  background-color: #0e0e0d; /* Change the background color to match your design */
-  color: #fff; /* Set text color to white */
-  font-weight: bold; /* Make the text bold */
-  cursor: pointer; /* Add a pointer cursor on hover */
+  background-color: #0e0e0d;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .product-filter input[type="number"]::placeholder,
 .product-filter input[type="text"]::placeholder {
-  font-size: 14px; /* Adjust the font size as needed */
-  color: #999; /* Adjust the color of the placeholder text */
+  font-size: 14px;
+  color: #999;
 }
 
-/* Media Queries for Responsive Design */
 @media (max-width: 768px) {
   .navbar {
     display: flex;
