--- a/src/components/ProductList1.css
+++ b/src/components/ProductList1.css
@@ -1,4 +1,3 @@
-/* Product List Styles */
 .product-list {
   display: flex;
   flex-wrap: wrap;
@@ -11,9 +10,11 @@
   border: 1px solid #ddd;
   border-radius: 5px;
   width: 250px;
-  height: fit-content;
+  height: auto;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
+  display: flex;
+  flex-direction: column;
 }
 
 .product-card:hover {
@@ -36,28 +37,30 @@
   margin-top: 5px;
 }
 
+.product-description {
+  flex: 1;
+  margin-bottom: 10px;
+}
+
 .product-filter {
   margin-top: 20px;
   text-align: center;
 }
 
 .add-to-cart {
-  background-color: black; /* Button background color */
-  color: #fff; /* Text color */
-  border: none; /* Remove border */
-  border-radius: 5px; /* Add rounded corners */
-  padding: 10px 20px; /* Add padding to make it larger */
-  font-weight: bold; /* Make the text bold */
-  cursor: pointer; /* Show pointer cursor on hover */
-  transition: background-color 0.3s; /* Add a smooth color transition on hover */
+  background-color: black;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s;
 
-  /* Style on hover */
   &:hover {
-    background-color: rgb(63, 62, 62); /* Darker background on hover */
+    background-color: rgb(63, 62, 62);
   }
 }
 
-/* Media Queries for Responsive Design */
 @media (max-width: 768px) {
   .product-card {
     width: 100%;
